Fix spacing, remove /all/ on https as well - On UAT, should test if /all/ breaks file upload (it shouldn't)

--- a/scss/moove/_general.scss
+++ b/scss/moove/_general.scss
@@ -529,3 +529,7 @@ body#page-question-type-multichoice  {
     }
   }
 }
+
+.mobilelink {
+  text-align: center;
+}
